libmysql/libmysql.c
@@ -3725,12 +3725,13 @@ static void fetch_long_with_conversion(MYSQL_BIND *param, MYSQL_FIELD *field,
     param   output buffer descriptor
     field   column metadata
     value   column data
-    width   default number of significant digits used when converting
-            float/double to string
+    type    either MY_GCVT_ARG_FLOAT or MY_GCVT_ARG_DOUBLE.
+            Affects the maximum number of significant digits
+            returned by my_gcvt().
 */
 
 static void fetch_float_with_conversion(MYSQL_BIND *param, MYSQL_FIELD *field,
-                                        double value, int width)
+                                        double value, my_gcvt_arg_type type)
 {
   char *buffer= (char *)param->buffer;
   double val64 = (value < 0 ? -floor(-value) : floor(value));
@@ -3814,30 +3815,15 @@ static void fetch_float_with_conversion(MYSQL_BIND *param, MYSQL_FIELD *field,
       floating point -> string conversion nicely, honor all typecodes
       and param->offset possibly set in mysql_stmt_fetch_column
     */
-    char buff[MAX_DOUBLE_STRING_REP_LENGTH];
-    char *end;
-    /* TODO: move this to a header shared between client and server. */
-#define NOT_FIXED_DEC  31
+    char buff[FLOATING_POINT_BUFFER];
+    size_t len;
     if (field->decimals >= NOT_FIXED_DEC)
-#undef NOT_FIXED_DEC
-    {
-      /*
-        The 14 below is to ensure that the server and client has the same
-        precisions. This will ensure that on the same machine you get the
-        same value as a string independent of the protocol you use.
-      */
-      sprintf(buff, "%-*.*g", (int) min(sizeof(buff)-1,
-                                        param->buffer_length),
-	      min(14,width), value);
-      end= strcend(buff, ' ');
-      *end= 0;
-    }
+      len= my_gcvt(value, type,
+                   (int) min(sizeof(buff)-1, param->buffer_length),
+                   buff, NULL);
     else
-    {
-      sprintf(buff, "%.*f", (int) field->decimals, value);
-      end= strend(buff);
-    }
-    fetch_string_with_conversion(param, buff, (uint) (end - buff));
+      len= my_fcvt(value, (int) field->decimals, buff, NULL);
+    fetch_string_with_conversion(param, buff, (uint) len);
     break;
   }
   }
@@ -3881,7 +3867,7 @@ static void fetch_datetime_with_conversion(MYSQL_BIND *param,
   {
     ulonglong value= TIME_to_ulonglong(my_time);
     fetch_float_with_conversion(param, field,
-                                ulonglong2double(value), DBL_DIG);
+                                ulonglong2double(value), MY_GCVT_ARG_DOUBLE);
     break;
   }
   case MYSQL_TYPE_TINY:
@@ -3975,7 +3961,7 @@ static void fetch_result_with_conversion(MYSQL_BIND *param, MYSQL_FIELD *field,
   {
     float value;
     float4get(value,*row);
-    fetch_float_with_conversion(param, field, value, FLT_DIG);
+    fetch_float_with_conversion(param, field, value, MY_GCVT_ARG_FLOAT);
     *row+= 4;
     break;
   }
@@ -3983,7 +3969,7 @@ static void fetch_result_with_conversion(MYSQL_BIND *param, MYSQL_FIELD *field,
   {
     double value;
     float8get(value,*row);
-    fetch_float_with_conversion(param, field, value, DBL_DIG);
+    fetch_float_with_conversion(param, field, value, MY_GCVT_ARG_DOUBLE);
     *row+= 8;
     break;
   }
